# projectmat

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pro.xlsx
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  service_diff.txt  tmp_service.py
backend/alembic/: env.py
backend/alembic/versions/: 745f051970ed_add_4_agent_pipeline_columns.py  777a5e0635c1_add_tracking_columns_to_import_batches.py  8d0f2b6c9a10_add_evaluation_progress_state.py  a1b2c3d4e5f6_add_batch_pair_scores_table.py  b322f671e4b3_add_column_name_to_import_validation_.py  bbeb739cb3f2_phase_1_data_model.py  c2a1f0d3e4b5_make_entities_batch_scoped.py  c6f0a8329075_add_resumes_url_to_import_batch.py  d4e5f6a7b8c9_add_match_recommendation_cache.py  ddfc94f635f5_add_import_batch_id_to_project.py  f6e7d8c9b0a1_phase_6_profile_repository_live_app.py
backend/app/: config.py  database.py  dependencies.py  main.py  models.py
backend/app/features/candidates/: __init__.py  models.py  router.py  schemas.py
backend/app/features/evaluations/: __init__.py  cli.py  codeforces_client.py  context_extractor.py  github_client.py  kaggle_client.py  leetcode_client.py  live_app_evaluator.py  models.py  repository_evaluator.py  router.py  schemas.py  service.py  (+1 more)
backend/scripts/: authorize_google_drive.py  clean_db.py
backend/scripts/tests/: conftest.py
backend/tests/: conftest.py  test_models.py
backend/tests/fixtures/: bad_columns_workbook.xlsx  missing_sheet_workbook.xlsx  valid_workbook.xlsx
backend/tests/integration/: test_discoverability_api.py  test_import_api.py  test_matching_api.py
backend/tests/unit/: test_config.py  test_import_service.py  test_live_app_evaluator.py  test_logging.py  test_match_explanation.py  test_models.py  test_profile_parser.py  test_repository_evaluator.py  test_scoring.py  test_skill_aliases.py  test_workbook_parser.py
(+107 files in other folders)
